--- a/ServletPractice/src/main/webapp/WEB-INF/web.xml
+++ b/ServletPractice/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,8 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error.jsp</location>
+	</error-page>
 </web-app>
